--- a/src/libs/ui-content/home/home.component.scss
+++ b/src/libs/ui-content/home/home.component.scss
@@ -1,24 +1,22 @@
 @import 'src/styles/global.scss';
 
-button {
-  margin: 10px;
-}
+.formContainer {
 
-.saperator {
-  border: 1px solid black;
-  width: 800px;
-  height: 100px;
-  display: flex;
-  justify-content: stretch;
+  .form {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 30px;
 
-  .line1, .line2 {
-    width: 100%;
-    border-top: 2px solid red;
-    margin-top: 10px;
-  }
+    .books_Form {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      width: 500px;
 
-  .content {
-    width: 100%;
-    text-align: center;
+      mat-form-field {
+        width: 48%;
+      }
+    }
   }
 }
