--- a/src/libs/ui-content/home/home.component.html
+++ b/src/libs/ui-content/home/home.component.html
@@ -1,4 +1,10 @@
-
+<div>
+  <ol>
+    <li *ngFor="let book of allBooks">
+      {{ book?.title }}
+    </li>
+  </ol>
+</div>
 <div class="formContainer">
   <div class="form">
     <form class="books_Form" [formGroup]="booksForm" (ngSubmit)="onSubmit()">
@@ -29,20 +35,24 @@
       <mat-form-field>
         <input matInput placeholder="imageUrl" formControlName="imageUrl"/>
       </mat-form-field>
-      <div formGroupName="reviews">
-        <mat-form-field>
-          <input matInput placeholder="personName" formControlName="personName"/>
-        </mat-form-field>
-        <mat-form-field>
-          <input matInput placeholder="personRating" formControlName="personRating"/>
-        </mat-form-field>
-        <mat-form-field>
-          <textarea matInput placeholder="reviewDescription" formControlName="reviewDescription"></textarea>
-        </mat-form-field>
+      <div formArrayName="reviews">
+        <button mat-raised-button color="accent" (click)="addReview()">Add review</button>
+        <div *ngFor="let review of reviews.controls, let i = index">
+          <div [formGroupName]="i">
+            <mat-form-field>
+              <input matInput placeholder="personName" formControlName="personName"/>
+            </mat-form-field>
+            <mat-form-field>
+              <input matInput placeholder="personRating" formControlName="personRating"/>
+            </mat-form-field>
+            <mat-form-field>
+              <textarea matInput placeholder="reviewDescription" formControlName="reviewDescription"></textarea>
+            </mat-form-field>
+          </div>
+        </div>
       </div>
       <div class="signIn_Button_Div">
-        <button mat-raised-button color="primary" type="submit">Sign In</button>
-        <button mat-raised-button color="accent">Cancel</button>
+        <button mat-raised-button color="primary" type="submit">Add Book</button>
       </div>
     </form>
   </div>
