--- a/src/libs/ui-content/home/home.component.html
+++ b/src/libs/ui-content/home/home.component.html
@@ -9,7 +9,8 @@
     </li>
   </ol>
 </div>
-
+<eb-book></eb-book>
+<eb-book-detail></eb-book-detail>
 <h1>Pratik Kathrotia (h1)</h1>
 <h2>Pratik Kathrotia (h2)</h2>
 <h3>Pratik Kathrotia (h3)</h3>
