--- a/src/libs/ui-global/toolbar/toolbar.component.html
+++ b/src/libs/ui-global/toolbar/toolbar.component.html
@@ -1,10 +1,11 @@
 <mat-toolbar color="primary">
-    <mat-toolbar-row>
-      <span>eBooks</span>
-      <span class="example-spacer"></span>
-      <span class="sign_In_Span" (click)="openAuthPage('/sign-in')">Sign In</span>
-      <mat-icon class="person_icon" *ngIf="loggedIn">person</mat-icon>
-      <span class="signUp_Span" (click)="openAuthPage('/sign-up')">Sign Up</span>
-      <span class="signUp_Span" (click)="logout()">Logout</span>
-    </mat-toolbar-row>
-  </mat-toolbar>
+  <mat-toolbar-row>
+    <span>eBooks</span>
+    <span class="example-spacer"></span>
+    <span class="sign_In_Span"
+          (click)="openAuthPage('/sign-in')"
+          *ngIf="!loggedIn">Sign In</span>
+    <mat-icon class="person_icon" *ngIf="loggedIn">person</mat-icon>
+    <span class="signUp_Span" (click)="logout()">Logout</span>
+  </mat-toolbar-row>
+</mat-toolbar>
