--- a/src/libs/ui-content/book-detail/book-detail.component.html
+++ b/src/libs/ui-content/book-detail/book-detail.component.html
@@ -1,3 +1,32 @@
-<p>
-  book-detail works!
-</p>
+<div class="book_Detail_Container">
+  <div class="book_Img">
+    <div class="book_Front_Page">
+      <img src="../../../assets/book_covers/lincoln_and_gettysburg_address.jpg" />
+    </div>
+    <div class="div_To_Add_In_Cart">
+      <button mat-raised-button color="primary" class="button_To_Add_In_Cart">
+        Add to Cart
+      </button>
+      <button mat-raised-button color="primary" class="button_To_Add_In_Favorite">
+        Add to Favorite
+      </button>
+    </div>
+  </div>
+  <div class="book_Content_Div">
+    <div class="about_The_Book">
+      <p><b>Lincoln and Gettysburg Address</b></p>
+      <h2>About the Book</h2>
+      <p>
+        The Gettysburg Address is a speech that U.S. President Abraham Lincoln delivered 
+        during the American Civil War at the dedication of the Soldiers' National Cemetery 
+        in Gettysburg, Pennsylvania, on the afternoon of Thursday, November 19, 1863, four 
+        and a half months after the Union armies defeated those of the Confederacy at the 
+        Battle of Gettysburg. It is one of the best-known speeches in American history.
+      </p>
+      <p>Author: Gouglas L. Wilson</p>
+    </div>
+    <div class="rating_And_Review_Div">
+      <span>Start Rating Goes Here.</span> | <span>arraylength Customer Reviews Goes Here.</span>
+    </div>
+  </div>
+</div>
