--- a/src/libs/ui-global/action-bar/action-bar.component.html
+++ b/src/libs/ui-global/action-bar/action-bar.component.html
@@ -1,17 +1,15 @@
 <div class="actionbar">
   <input matInput placeholder="Search . . ." autocomplete="off">
   <div class="actionbar_Actions">
-    <button mat-flat-button color="accent">
-      <mat-icon class="sm">view_module</mat-icon> Grid
-    </button>
-    <button mat-flat-button color="accent">
-        <mat-icon class="sm">view_list</mat-icon> List
-    </button>
-    <button mat-flat-button color="accent">
-        <mat-icon class="sm">settings</mat-icon> Action
-    </button>
-    <button mat-flat-button color="accent">
-        <mat-icon class="sm">view_list</mat-icon> Action
+    <mat-slide-toggle color="primary">
+      List view
+    </mat-slide-toggle>
+    <button mat-icon-button color="primary">
+      <mat-icon
+        class="md"
+        matBadge="{{itemsInTheCart}}"
+        matBadgeColor="warn"
+        matBadgeOverlap="false">shopping_cart</mat-icon>
     </button>
   </div>
 </div>
