--- a/src/libs/ui-content/book-detail/book-detail.component.html
+++ b/src/libs/ui-content/book-detail/book-detail.component.html
@@ -4,29 +4,38 @@
       <img src="../../../assets/book_covers/lincoln_and_gettysburg_address.jpg" />
     </div>
     <div class="div_To_Add_In_Cart">
-      <button mat-raised-button color="primary" class="button_To_Add_In_Cart">
+      <button mat-icon-button color="primary" class="button_To_Add_In_Cart">
+        <mat-icon>add_shopping_cart</mat-icon>
         Add to Cart
       </button>
-      <button mat-raised-button color="primary" class="button_To_Add_In_Favorite">
-        Add to Favorite
+      <button mat-icon-button color="primary"
+              class="button_To_Add_In_Favorite"
+              (click)="addFavorite()" *ngIf="favorite">
+        <mat-icon>favorite_border</mat-icon>
+        Add to Favorites
+      </button>
+      <button mat-icon-button color="primary"
+              class="button_To_Remove_Favorite"
+              (click)="addFavorite()" *ngIf="!favorite">
+        <mat-icon>favorite</mat-icon>
+        Remove Favorites
       </button>
     </div>
   </div>
   <div class="book_Content_Div">
     <div class="about_The_Book">
-      <p><b>Lincoln and Gettysburg Address</b></p>
-      <h2>About the Book</h2>
-      <p>
+      <h2>Lincoln and Gettysburg Address</h2>
+      <p class="book_Description">
         The Gettysburg Address is a speech that U.S. President Abraham Lincoln delivered 
         during the American Civil War at the dedication of the Soldiers' National Cemetery 
         in Gettysburg, Pennsylvania, on the afternoon of Thursday, November 19, 1863, four 
         and a half months after the Union armies defeated those of the Confederacy at the 
         Battle of Gettysburg. It is one of the best-known speeches in American history.
       </p>
-      <p>Author: Gouglas L. Wilson</p>
+      <p><strong>Author: Gouglas L. Wilson</strong></p>
     </div>
     <div class="rating_And_Review_Div">
-      <span>Start Rating Goes Here.</span> | <span>arraylength Customer Reviews Goes Here.</span>
+      <eb-star-rating></eb-star-rating>
     </div>
   </div>
 </div>
