--- a/src/libs/ui-content/home/home.component.html
+++ b/src/libs/ui-content/home/home.component.html
@@ -1,4 +1,7 @@
 <eb-book-detail></eb-book-detail>
+<eb-grid-book
+  *ngFor="let book of allBooks"
+  [book]="book"></eb-grid-book>
 <div class="formContainer">
   <div class="form">
     <form class="books_Form" [formGroup]="booksForm" (ngSubmit)="onSubmit()">
