Started working on list book component

--- a/src/libs/ui-common/list-book/list-book.component.html
+++ b/src/libs/ui-common/list-book/list-book.component.html
@@ -1,3 +1,5 @@
-<p>
-  list-book works!
-</p>
+<div class="list_Book_Container">
+  <div class="book_Img_Div">
+    <img src="../../../assets/book_covers/lincoln_and_gettysburg_address.jpg" />
+  </div>
+</div>
