--- a/src/libs/ui-content/home/home.component.html
+++ b/src/libs/ui-content/home/home.component.html
@@ -2,7 +2,8 @@
 <eb-grid-book
   *ngFor="let book of allBooks"
   [book]="book"></eb-grid-book>
-<div class="formContainer">
+  <eb-list-book></eb-list-book>
+<!-- <div class="formContainer">
   <div class="form">
     <form class="books_Form" [formGroup]="booksForm" (ngSubmit)="onSubmit()">
       <mat-form-field>
@@ -53,4 +54,4 @@
       </div>
     </form>
   </div>
-</div>
+</div> -->
