--- a/src/libs/ui-content/book-detail/book-detail.component.scss
+++ b/src/libs/ui-content/book-detail/book-detail.component.scss
@@ -22,7 +22,7 @@
 
     .div_To_Add_In_Cart {
       
-      padding: 27 * $px 0 * $px 0 * $px 10 * $px;
+      padding: 0 * $px 0 * $px 0 * $px 10 * $px;
       width: 100%;
 
       .button_To_Add_In_Cart {
@@ -35,15 +35,15 @@
 
   .book_Content_Div {
 
-    margin: 0px 0px 10px 10px;
+    margin: 0 * $px 0 * $px 10 * $px 10 *$px;
     
     .about_The_Book {
 
       background-image: url('../../../assets/book_covers/page_Image.jpg');
-      padding: 20px 20px 10px 20px;
+      padding: 20 * $px 20 * $px 10 * $px 20 * $px;
       background-repeat: no-repeat;
       background-size: 100% 100%;
-      min-height: 369px;
+      min-height: 369 * $px;
 
       .book_Description {
         text-align: justify;
@@ -52,7 +52,7 @@
 
     .rating_And_Review_Div {
 
-      padding: 10px;
+      padding: 10 * $px;
 
     }
 
