implemented grid book view

--- a/src/libs/ui-common/grid-book/grid-book.component.html
+++ b/src/libs/ui-common/grid-book/grid-book.component.html
@@ -1,4 +1,6 @@
-<div class="book_Card">
+<div class="book_Card"
+     *ngIf="book"
+     (click)="haide()">
   <div class="card_Header">
     <div class="card_Heading">
       <h4>{{ book?.title }}</h4>
@@ -10,9 +12,21 @@
   <div class="card_Image">
     <img [src]="book?.imageUrl">
   </div>
-  <div class="card_Description">
-    <p>{{ book?.description }}</p>
+  <div class="card_Actions">
+    <button mat-icon-button color="primary">
+      <mat-icon>add_shopping_cart</mat-icon>
+      Add to Cart
+    </button>
+    <button mat-icon-button color="primary"
+            class="button_To_Add_In_Favorite"
+            (click)="handleFavoriteClick()" *ngIf="!favorite">
+      <mat-icon>favorite_border</mat-icon>
+    </button>
+    <button mat-icon-button color="primary"
+            class="button_To_Remove_Favorite"
+            (click)="handleFavoriteClick()" *ngIf="favorite">
+      <mat-icon>favorite</mat-icon>
+    </button>
   </div>
-  <div class="card_Actions"></div>
 </div>
 
