--- a/src/libs/ui-content/home/home.component.html
+++ b/src/libs/ui-content/home/home.component.html
@@ -1,2 +1,5 @@
-<eb-book-detail></eb-book-detail>
-<eb-grid-book *ngFor="let book of allBooks" [book]="book"></eb-grid-book>
+<div class="home_Container">
+  <!-- <eb-book-detail></eb-book-detail> -->
+  <eb-grid-book *ngFor="let book of allBooks" [book]="book"></eb-grid-book>
+</div>
+
