--- a/src/libs/ui-common/grid-book/grid-book.component.scss
+++ b/src/libs/ui-common/grid-book/grid-book.component.scss
@@ -1,34 +1,46 @@
 @import 'src/styles/global.scss';
 @import 'src/styles/variables.scss';
+@import 'src/styles/colors.scss';
 
 
 .book_Card {
-  display: flex;
-  flex-direction: column;
-  padding: 0 20px;
+  display: inline-block;
+  padding: 0 20 * $px;
+  margin: 0 0 20 * $px 0;
   box-sizing: border-box;
-  border: 0.5px solid black;
-  width: 250px;
+  border: 2 * $px solid $box-shadow-color;
+  border-radius: 4 * $px;
+  width: 270 * $px;
 
-  // .card_Header {
-  //   height: 40px;
-  //   margin: 0;
-  // }
+  .card_Header {
+    margin: 0 0 10 * $px 0;
+
+    .card_Heading {
+      
+      h4 {
+        text-overflow: ellipsis;
+        margin: 10 * $px 0 0 0;
+      }
+    }
+
+    .card_SubHeading {
+      text-overflow: ellipsis;
+    }
+    
+  }
 
   .card_Image {
+    width: 100%;
+
     img {
-      height: 300px;
+      width: 100%;
+      height: 300 * $px;
     }
   }
 
-  .card_Description {
-    height: 100px;
-
-    p {
-      text-overflow: ellipsis;
-      white-space: nowrap;
-      overflow: hidden;
-    }
+  .card_Actions {
+    display: flex;
+    justify-content: space-between;
   }
 }
 
