--- a/src/libs/ui-content/home/home.component.html
+++ b/src/libs/ui-content/home/home.component.html
@@ -1,7 +1,7 @@
-<eb-book-detail></eb-book-detail>
+<!-- <eb-book-detail></eb-book-detail>
 <eb-grid-book
   *ngFor="let book of allBooks"
-  [book]="book"></eb-grid-book>
+  [book]="book"></eb-grid-book> -->
   <eb-list-book></eb-list-book>
 <!-- <div class="formContainer">
   <div class="form">
