Start rating issue solved and home component is working fine now

--- a/src/libs/ui-content/home/home.component.scss
+++ b/src/libs/ui-content/home/home.component.scss
@@ -1,8 +1,12 @@
 @import 'src/styles/global.scss';
 
-.home_Container {
+.grid_View {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  padding: 12 * $px 0;
+}
+
+.list_View{
   padding: 12 * $px 0;
 }
