--- a/src/libs/ui-common/list-book/list-book.component.html
+++ b/src/libs/ui-common/list-book/list-book.component.html
@@ -1,14 +1,15 @@
 <div class="list_Book_Container">
   <div class="book_Img_Div">
-    <img src="../../../assets/book_covers/lincoln_and_gettysburg_address.jpg" />
+    <img [src]="book?.imageUrl" />
   </div>
   <div class="book_content_div">
-    <h3>{{book_Title}}</h3>
-    <p class="book_Author"><small>By {{book_Author}}</small></p>
-    <div class="book_Description">{{book_Description}}</div>
-    <p class="book_Price"><b>Price:</b> &nbsp; {{book_Price | currency:USD}}</p>
+    <h3>{{ book?.title }}</h3>
+    <p class="book_Author"><small>By {{ book?.author }}</small></p>
+    <div class="book_Description">{{ book?.description }}</div>
+    <p class="book_Price"><b>Price:</b> &nbsp; {{ book?.price | currency:USD }}</p>
     <div class="book_Actions">
-      <eb-star-rating [customer_Reviews]="false"></eb-star-rating>
+      <eb-star-rating [customer_Reviews]="false"
+                      [rating]="book?.rating"></eb-star-rating>
       <div class="div_To_Add_In_Cart">
           <button mat-icon-button color="primary" class="button_To_Add_In_Cart">
             <mat-icon>add_shopping_cart</mat-icon>
