updated book service to retrieve singlr doc

--- a/src/libs/ui-common/grid-book/grid-book.component.html
+++ b/src/libs/ui-common/grid-book/grid-book.component.html
@@ -1,6 +1,5 @@
 <div class="book_Card"
-     *ngIf="book"
-     (click)="haide()">
+     *ngIf="book">
   <div class="card_Header">
     <div class="card_Heading">
       <h4>{{ book?.title }}</h4>
