--- a/src/libs/ui-common/grid-book/grid-book.component.scss
+++ b/src/libs/ui-common/grid-book/grid-book.component.scss
@@ -11,6 +11,7 @@
   border: 2 * $px solid $box-shadow-color;
   border-radius: 4 * $px;
   width: 270 * $px;
+  background: white;
 
   .card_Header {
     margin: 0 0 10 * $px 0;
