--- a/src/libs/ui-content/book-detail/book-detail.component.scss
+++ b/src/libs/ui-content/book-detail/book-detail.component.scss
@@ -17,20 +17,17 @@
         width: 250 * $px;
         height: 350 * $px;
       }
-
     }
 
     .div_To_Add_In_Cart {
       
-      padding: 0 * $px 0 * $px 0 * $px 10 * $px;
+      padding: 0 0 0 10 * $px;
       width: 100%;
 
       .button_To_Add_In_Cart {
         width: 45%;
       }
-
     }
-
   }
 
   .book_Content_Div {
@@ -51,11 +48,7 @@
     }
 
     .rating_And_Review_Div {
-
       padding: 10 * $px;
-
     }
-
   }
-
 }
