--- a/src/libs/ui-global/action-bar/action-bar.component.html
+++ b/src/libs/ui-global/action-bar/action-bar.component.html
@@ -1,7 +1,8 @@
 <div class="actionbar">
   <input matInput placeholder="Search . . ." autocomplete="off">
   <div class="actionbar_Actions">
-    <mat-slide-toggle color="primary">
+    <mat-slide-toggle color="primary"
+                      (change)="change_View($event)">
       List view
     </mat-slide-toggle>
     <button mat-icon-button color="primary">
