--- a/src/libs/ui-content/home/home.component.html
+++ b/src/libs/ui-content/home/home.component.html
@@ -1,9 +1,9 @@
 <div class="home_Container">
   <!-- <eb-book-detail></eb-book-detail> -->
-  <div *ngIf="gridView" class="grid_View">
+  <div *ngIf="!list_View" class="grid_View">
     <eb-grid-book *ngFor="let book of allBooks" [book]="book"></eb-grid-book>
   </div>
-  <div *ngIf="!gridView" class="list_View">
+  <div *ngIf="list_View" class="list_View">
     <eb-list-book *ngFor="let book of allBooks" [book]="book"></eb-list-book>
   </div>
 </div>
