--- a/src/libs/ui-content/book-detail/book-detail.component.html
+++ b/src/libs/ui-content/book-detail/book-detail.component.html
@@ -1,7 +1,7 @@
 <div class="book_Detail_Container">
   <div class="book_Img">
     <div class="book_Front_Page">
-      <img src="../../../assets/book_covers/lincoln_and_gettysburg_address.jpg" />
+      <img [src]="book?.imageUrl" />
     </div>
     <div class="div_To_Add_In_Cart">
       <button mat-icon-button color="primary" class="button_To_Add_In_Cart">
@@ -24,15 +24,9 @@
   </div>
   <div class="book_Content_Div">
     <div class="about_The_Book">
-      <h2>Lincoln and Gettysburg Address</h2>
-      <p class="book_Description">
-        The Gettysburg Address is a speech that U.S. President Abraham Lincoln delivered 
-        during the American Civil War at the dedication of the Soldiers' National Cemetery 
-        in Gettysburg, Pennsylvania, on the afternoon of Thursday, November 19, 1863, four 
-        and a half months after the Union armies defeated those of the Confederacy at the 
-        Battle of Gettysburg. It is one of the best-known speeches in American history.
-      </p>
-      <p><strong>Author: Gouglas L. Wilson</strong></p>
+      <h2>{{book?.title}}</h2>
+      <p><strong>{{book?.author}}</strong></p>
+      <p class="book_Description">{{book?.description}}</p>
     </div>
     <div class="rating_And_Review_Div">
       <eb-star-rating></eb-star-rating>
