--- a/src/libs/ui-common/grid-book/grid-book.component.scss
+++ b/src/libs/ui-common/grid-book/grid-book.component.scss
@@ -18,7 +18,7 @@
     cursor: pointer;
 
     &:hover {
-      color: rgb(40, 118, 207);
+      color: #1E90FF;
     }
 
     .card_Heading {
@@ -41,6 +41,7 @@
     img {
       width: 100%;
       height: 300 * $px;
+      cursor: pointer;
     }
   }
 
