resolve book title issue

--- a/src/libs/ui-common/grid-book/grid-book.component.html
+++ b/src/libs/ui-common/grid-book/grid-book.component.html
@@ -3,7 +3,9 @@
   <div class="card_Header"
        (click)="handleBookClick()">
     <div class="card_Heading">
-      <h4>{{ book?.title }}</h4>
+      <p class="book_Title">
+        {{ book?.title }}
+      </p>
     </div>
     <div class="card_SubHeading">
       <small>{{ book?.author }}</small>
