--- a/src/libs/ui-global/sidebar/sidebar.component.html
+++ b/src/libs/ui-global/sidebar/sidebar.component.html
@@ -1,10 +1,10 @@
 <div class="sidebar">
   <div class="sidebar_Item"
        *ngFor="let item of sidebarItems, let i = index"
-       [ngClass]="{'selected': isSelected === item.id}"
+       [ngClass]="{'selected': isSelected(item)}"
        [matTooltip]="item.tooltip"
        matTooltipPosition="after"
-       (click)="selectIcon(item)">
+       (click)="handleSidebarItemClick(item)">
     <mat-icon color="primary">{{item.icon}}</mat-icon>
   </div>
 </div>
