--- a/src/libs/ui-global/toolbar/toolbar.component.html
+++ b/src/libs/ui-global/toolbar/toolbar.component.html
@@ -4,8 +4,11 @@
     <span class="example-spacer"></span>
     <span class="sign_In_Span"
           (click)="openAuthPage('/sign-in')"
-          *ngIf="!loggedIn">Sign In</span>
-    <mat-icon class="person_icon" *ngIf="loggedIn">person</mat-icon>
-    <span class="signUp_Span" (click)="logout()">Logout</span>
+          *ngIf="!isLogin">Sign In</span>
+    <mat-icon class="person_icon"
+              *ngIf="loggedIn">person</mat-icon>
+    <span class="signUp_Span"
+          (click)="logout()"
+          *ngIf="isLogin">Logout</span>
   </mat-toolbar-row>
 </mat-toolbar>
