--- a/src/libs/ui-content/book-detail/book-detail.component.scss
+++ b/src/libs/ui-content/book-detail/book-detail.component.scss
@@ -1,53 +1,69 @@
 @import 'src/styles/global.scss';
 
 .book_Detail_Container {
-  padding: 10 * $px 10 * $px 10 * $px 0 * $px;
+  padding: 20 * $px 10 * $px 10 * $px 0 * $px;
   display: flex;
+  flex-direction: column;
 
-  .book_Img {
-
+  .book_Detail_Content {
     display: flex;
-    flex-direction: column;
+    padding: 0 0 27 * $px 0;
+    .book_Img {
 
-    .book_Front_Page {
-      padding: 20 * $px;
-      box-shadow:  2 * $px 2 * $px 2 * $px 2 * $px $box-shadow-color;
+      display: flex;
+      flex-direction: column;
 
-      img {
-        width: 250 * $px;
-        height: 350 * $px;
+      .book_Front_Page {
+        padding: 20 * $px;
+        box-shadow:  2 * $px 2 * $px 2 * $px 2 * $px $box-shadow-color;
+
+        img {
+          width: 250 * $px;
+          height: 350 * $px;
+        }
+      }
+
+      .div_To_Add_In_Cart {
+        
+        padding: 10 * $px 0 0 10 * $px;
+        width: 100%;
+
+        .button_To_Add_In_Cart {
+          width: 45%;
+        }
       }
     }
 
-    .div_To_Add_In_Cart {
-      
-      padding: 0 0 0 10 * $px;
-      width: 100%;
+    .book_Content_Div {
 
-      .button_To_Add_In_Cart {
-        width: 45%;
+      margin: 0 * $px 0 * $px 10 * $px 10 *$px;
+      
+      .about_The_Book {
+
+        background-image: url('../../../assets/book_covers/page_Image.jpg');
+        padding: 20 * $px 20 * $px 10 * $px 20 * $px;
+        background-repeat: no-repeat;
+        background-size: 100% 100%;
+        min-height: 369 * $px;
+
+        .book_Description {
+          text-align: justify;
+        }
+      }
+
+      .rating_And_Review_Div {
+        padding: 10 * $px;
       }
     }
   }
 
-  .book_Content_Div {
+  .customer_Reviews_Component {
+    display: flex;
+    flex-direction: column;
 
-    margin: 0 * $px 0 * $px 10 * $px 10 *$px;
-    
-    .about_The_Book {
-
-      background-image: url('../../../assets/book_covers/page_Image.jpg');
-      padding: 20 * $px 20 * $px 10 * $px 20 * $px;
-      background-repeat: no-repeat;
-      background-size: 100% 100%;
-      min-height: 369 * $px;
-
-      .book_Description {
-        text-align: justify;
-      }
-    }
-
-    .rating_And_Review_Div {
+    .customer_Reviews {
+      border-top: 1 * $px solid silver;
+      width: 50%;
       padding: 10 * $px;
     }
   }
