Added categories for rail and resolve routing issue on page refresh

--- a/src/libs/ui-global/siderail/siderail.component.html
+++ b/src/libs/ui-global/siderail/siderail.component.html
@@ -1,8 +1,8 @@
 <div class="siderail">
   <div class="siderail_Items">
     <div class="siderail_Item"
-         *ngFor="let item of siderailItems, let i = index">
-      {{item.title}}
+         *ngFor="let category of categories, let i = index">
+      {{ category?.title }}
     </div>
   </div>
 </div>
