--- a/src/app/sign-in/sign-in.component.scss
+++ b/src/app/sign-in/sign-in.component.scss
@@ -25,6 +25,10 @@
       }
     }
 
+    .error_Message {
+      color: red;
+    }
+
     .signIn_Form_Div {
       margin: 20 * $px auto;
       width: 100%;
