--- a/src/libs/ui-content/book-detail/book-detail.component.html
+++ b/src/libs/ui-content/book-detail/book-detail.component.html
@@ -26,7 +26,7 @@
     <div class="book_Content_Div">
       <div class="about_The_Book">
         <h2>{{book?.title}}</h2>
-        <p><strong>{{book?.author}}</strong></p>
+        <p><strong>Author: {{book?.author}}</strong></p>
         <p class="book_Description">{{book?.description}}</p>
       </div>
       <div class="rating_And_Review_Div">
