--- a/src/libs/ui-content/favorite-books/favorite-books.component.html
+++ b/src/libs/ui-content/favorite-books/favorite-books.component.html
@@ -1,3 +1,3 @@
-<p>
-  favorite-books works!
-</p>
+<div class="grid_View">
+  <eb-grid-book *ngFor="let book of userBooks" [book]="book"></eb-grid-book>
+</div>
