categorized view done (change cat. names in DB)

--- a/src/libs/ui-global/siderail/siderail.component.html
+++ b/src/libs/ui-global/siderail/siderail.component.html
@@ -1,7 +1,8 @@
 <div class="siderail">
   <div class="siderail_Items">
     <div class="siderail_Item"
-         *ngFor="let category of categories, let i = index">
+         *ngFor="let category of categories, let i = index"
+         (click)="handleCategoryClick(category)">
       {{ category?.title }}
     </div>
   </div>
