added favorite functionality for user

--- a/src/libs/ui-common/grid-book/grid-book.component.html
+++ b/src/libs/ui-common/grid-book/grid-book.component.html
@@ -24,12 +24,12 @@
             class="button_To_Add_In_Favorite"
             matTooltip="Add to your favorites"
             [matTooltipShowDelay]="showDelay.value"
-            (click)="handleFavoriteClick()" *ngIf="!favorite">
+            (click)="handleFavoriteClick()" *ngIf="!isFavorited">
       <mat-icon>favorite_border</mat-icon>
     </button>
     <button mat-icon-button color="primary"
             class="button_To_Remove_Favorite"
-            (click)="handleFavoriteClick()" *ngIf="favorite">
+            (click)="handleFavoriteClick()" *ngIf="isFavorited">
       <mat-icon>favorite</mat-icon>
     </button>
   </div>
