added favorite to details page too

--- a/src/libs/ui-content/favorite-books/favorite-books.component.html
+++ b/src/libs/ui-content/favorite-books/favorite-books.component.html
@@ -1,3 +1,6 @@
 <div class="grid_View">
-  <eb-grid-book *ngFor="let book of userBooks" [book]="book"></eb-grid-book>
+  <eb-grid-book *ngFor="let book of userBooks"
+                [book]="book"
+                [isFavorited]="true"
+                (favoriteState)="isFavoriteState($event)"></eb-grid-book>
 </div>
