--- a/src/libs/ui-common/list-book/list-book.component.html
+++ b/src/libs/ui-common/list-book/list-book.component.html
@@ -6,7 +6,7 @@
     <h3 class="book_Title" (click)="handleSelectBook()">{{ book?.title | titlecase }}</h3>
     <p class="book_Author"><small>By {{ book?.author }}</small></p>
     <div class="book_Description">{{ book?.description }}</div>
-    <p class="book_Price"><b>Price:</b> &nbsp; {{ book?.price | currency:USD }}</p>
+    <p class="book_Price"><b>Price:</b> &nbsp; {{ book?.price | currency:'USD' }}</p>
     <div class="book_Actions">
       <eb-star-rating [customer_Review]="false"
                       [rating]="book?.rating"></eb-star-rating>
