added cinfirmation email on sign up and send password reset link on click of forgot password link in sign in page

--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -22,8 +22,8 @@
                  formControlName="password"/> 
         </mat-form-field>
         <br />
-        <a href="#">
-          <small>Forgot Password?</small>
+        <a href="javascript:void(0)">
+          <small (click)="resetPassword()">Forgot Password?</small>
         </a>
         <br />
         <div  class="remember_Sign_In_Details">
