Added emailVerifincation functionality in the sign in page. The user won't be allowed to sign-in until the email is verified by the user. In Sign Up page instead of navigating the user to the home page right after signing up, noe the user will be redirected to the sign in page where the user will be checked if the user has verified the email or not. in action-bar component number 2 from the cart is removed. toolbar component user icon is brought back

--- a/src/libs/ui-global/toolbar/toolbar.component.html
+++ b/src/libs/ui-global/toolbar/toolbar.component.html
@@ -6,7 +6,7 @@
           (click)="openAuthPage('/sign-in')"
           *ngIf="!isLogin">Sign In</span>
     <mat-icon class="person_icon"
-              *ngIf="loggedIn">person</mat-icon>
+              *ngIf="isLogin">person</mat-icon>
     <span class="signUp_Span"
           (click)="logout()"
           *ngIf="isLogin">Logout</span>
