Brought Sidebar and side Rail, Fixed roting, Resolved sign in on click of cancel button, Refresh the Global page on sign out

--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -39,7 +39,8 @@
                   type="submit">Sign In</button>
           <button mat-raised-button
                   color="accent"
-                  routerLink="/global/home">Cancel</button>
+                  routerLink="/global/home"
+                  (click)="cancelSignIn()">Cancel</button>
         </div>
       </form>
     </div>
