created footer component nad removed mock json

--- a/src/libs/ui-global/footer/footer.component.html
+++ b/src/libs/ui-global/footer/footer.component.html
@@ -1,3 +1,19 @@
-<p>
-  footer works!
-</p>
+<div class="footer_Container">
+  <div class="first_row">
+    <div class="aboutUs_Portfolio">
+      <p>About Us</p>
+    </div>
+    <div class="contact_Info">
+      <p>
+        Contact Us: &nbsp; <a href="javascript:void(0)">firebase.ebooks@gmail.com</a>
+      </p>
+    </div>
+  </div>
+  <div class="privacy_Conditions">
+      <span>Conditions of Use</span> &nbsp;
+      <span>Privacy Policy</span>
+  </div>
+  <div class="copy_Rights">
+      <span>2019-2029 &copy; eBooks.Inc</span>
+  </div>
+</div>
