Created footer component

--- a/src/libs/ui-global/footer/footer.component.html
+++ b/src/libs/ui-global/footer/footer.component.html
@@ -1,17 +1,13 @@
 <div class="footer_Container">
-  <div class="first_row">
-    <div class="aboutUs_Portfolio">
-      <p>About Us</p>
-    </div>
-    <div class="contact_Info">
-      <p>
-        Contact Us: &nbsp; <a href="javascript:void(0)">firebase.ebooks@gmail.com</a>
-      </p>
-    </div>
+  <div class="footer_Header">
+    <p>
+      Contact Us: &nbsp; <a href="javascript:void(0)">firebase.ebooks@gmail.com</a>
+    </p>
   </div>
-  <div class="privacy_Conditions">
-      <span>Conditions of Use</span> &nbsp;
-      <span>Privacy Policy</span>
+  <div class="footer_Content">
+    <p>About Us</p>
+    <span>Conditions of Use</span> &nbsp;
+    <span>Privacy Policy</span>
   </div>
   <div class="copy_Rights">
       <span>2019-2029 &copy; eBooks.Inc</span>
