--- a/src/libs/ui-global/footer/footer.component.scss
+++ b/src/libs/ui-global/footer/footer.component.scss
@@ -5,54 +5,51 @@
   display: flex;
   flex-direction: column;
   border-top: 1px solid gray;
-  background-color: #d1eeeb;
+  background-color: #353a3d;
   height: 30vh;
+  color: rgb(243, 243, 240);
 
-  .first_row {
+  .footer_Header {
+    background-color: #5f6266;
     display: flex;
-    flex-direction: column;
-    margin-left: 42%;
-    margin-top: 50 * $px;
+    flex-direction: row;
+    height: 59 * $px;
 
-    .aboutUs_Portfolio {
-      display: flex;
-      padding: 10 * $px;
-      height: 10 * $px;
-      margin-left: 70 * $px;
+    p {
+      text-align: center;
+      margin: auto;
 
-      p {
-        text-align: center;
-        display: inline;
+      a {
+        color: rgb(243, 243, 240);
       }
-    }
 
-    .contact_Info {
-      display: flex;
-      padding: 10 * $px;
-      height: 10 * $px;
-      margin-left: -30 * $px;
-  
-      p {
-        text-align: center;
-        display: inline;
+      a:hover {
+        color: #ed9302;
       }
     }
   }
 
-  .privacy_Conditions {
+  .footer_Content {
+
     display: flex;
     flex-direction: row;
-    margin-left: 38.7%;
-    margin-top: 30 * $px;
+    margin: auto;
+
+    p {
+      margin-top: 0 * $px;
+      cursor: pointer;
+    }
 
     span {
       margin-left: 36 * $px;
+      cursor: pointer;
     }
+
   }
 
   .copy_Rights {
     display: flex;
-    margin-left: 44%;
-    margin-top: 30 * $px;
+    margin: auto;
+    // margin-top: 30 * $px;
   }
 }
