Apllied css to components to fix footer component place

--- a/src/app/sign-in/sign-in.component.scss
+++ b/src/app/sign-in/sign-in.component.scss
@@ -78,6 +78,7 @@
       width: 100%;
       display: flex;
       justify-content: center;
+      padding-bottom:66px;
 
       .signUp_Button {  
         width: 50%;
