--- a/src/libs/ui-common/grid-book/grid-book.component.scss
+++ b/src/libs/ui-common/grid-book/grid-book.component.scss
@@ -12,6 +12,7 @@
   border-radius: 4 * $px;
   width: 270 * $px;
   background: white;
+  padding-bottom:66px;
 
   .card_Header {
     margin: 0 0 10 * $px 0;
