--- a/src/libs/ui-common/list-book/list-book.component.scss
+++ b/src/libs/ui-common/list-book/list-book.component.scss
@@ -5,6 +5,8 @@
   padding: 10 * $px 10 * $px 10 * $px 0 * $px;
   display: flex;
   border-top: 1px solid rgb(141, 138, 138);
+  padding-bottom:66px;
+
   .book_Img_Div {
 
     padding: 16 * $px;
