--- a/src/libs/ui-global/footer/footer.component.html
+++ b/src/libs/ui-global/footer/footer.component.html
@@ -1,15 +1,15 @@
 <div class="footer_Container">
   <div class="footer_Header">
-    <p>
+    <p class="contact_Us">
       Contact Us: &nbsp; <a href="javascript:void(0)">firebase.ebooks@gmail.com</a>
     </p>
   </div>
   <div class="footer_Content">
-    <p>About Us</p>
-    <span>Conditions of Use</span> &nbsp;
-    <span>Privacy Policy</span>
+    <p class="about_Us">About Us</p>
+    <span class="condition_Of_Use">Conditions of Use</span> &nbsp;
+    <span class="privacy_Policy">Privacy Policy</span>
   </div>
   <div class="copy_Rights">
-      <span>2019-2029 &copy; eBooks.Inc</span>
+      <span class="copy_Rights">2019-2029 &copy; eBooks.Inc</span>
   </div>
 </div>
