--- a/src/libs/ui-content/book-detail/book-detail.component.scss
+++ b/src/libs/ui-content/book-detail/book-detail.component.scss
@@ -4,6 +4,7 @@
   padding: 20 * $px 10 * $px 10 * $px 0 * $px;
   display: flex;
   flex-direction: column;
+  padding-bottom:66px;
 
   .book_Detail_Content {
     display: flex;
